feat(core): 添加可写上下文变量的默认实现并优化相关功能
- 在 wind-core 模块中添加 DefaultWritableContextVariables 类，实现 WritableContextVariables 接口
- 优化 WindThreadTracer 类中的 getContextVariables 方法，使用 Map.copyOf 提高线程安全性
- 在 WritableContextVariables 接口中添加静态方法 of，用于创建实例
- 更新 ReadonlyContextVariables 接口，明确方法返回类型
- 在 ChatMessageContent 类中添加 serialVersionUID 以保证序列化兼容性